pod-security-cel/restricted/disallow-capabilities-strict/99-delete.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  name: disallow-capabilities-strict
